# AuraGo

./: .dockerignore  .gitattributes  .gitignore  .gitnexusignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSS_COLOR_MIGRATION_GUIDE.md  Dockerfile  Dockerfile.ansible  Dockerfile.browser_automation  FINAL_CORRECTED_REPORT.md  GO_FILES_ANALYSIS.md  KI_GERECHT_BERICHT.md  LICENSE  Linux  PROMPT_INJECTION_IMPROVEMENTS.md  PROMPT_INJECTION_SECURITY_REPORT.md  README.md  REMAINING_ISSUES.txt  SECURITY_AUDIT_SUMMARY.md  THIRD_PARTY_LIBRARIES.md  THIRD_PARTY_NOTICES.md  _en_cfg.txt  _en_mid.txt  _search_params.ps1  _search_snake_fields.ps1  _search_snake_params.ps1  _search_snake_vars.ps1  _search_struct_fields.ps1  _search_vars.ps1  _split_i18n.py  _toolcount.go  analyze_go_files.py  analyze_go_files_fixed.py  check_ki_gerecht.py  check_translations.py  check_translations_final.py  check_translations_language.py  (+79 more)
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.planning/: PROJECT.md  (+5 more)
tools/aurago-tui/: .gitignore  Cargo.toml  IMPROVEMENTS.md  README.md  install.ps1  make_release.bat  make_release.sh  zigcc.bat
tools/aurago-tui/src/: actions.rs  app.rs  config.rs  i18n.rs  main.rs
tools/aurago-tui/src/api/: auth.rs  mod.rs  sse.rs  types.rs
tools/aurago-tui/src/events/: keybindings.rs  mod.rs
tools/aurago-tui/src/ui/: animations.rs  chat.rs  config.rs  containers.rs  dashboard.rs  knowledge.rs  login.rs  media.rs  missions.rs  mod.rs  overlays.rs  plans.rs  skills.rs  splash.rs  theme.rs  utils.rs
(+4835 files in other folders)
