[package]
name = "aurago-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "cookies", "stream", "rustls"] }
eventsource-stream = "0.2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
directories = "6"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-width = "0.2"
chrono = "0.4"
anyhow = "1"
urlencoding = "2"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
